# OopsLauncher

./: .gitignore  README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  icon.rs  lib.rs  models.rs  utils.rs
src-tauri/src/commands/: app.rs  category.rs  file.rs  mod.rs  notification.rs
src/components/: ContextMenu.vue  DropZone.vue  FileIcon.vue  FileInfoDialog.vue  Sidebar.vue  SidebarItem.vue  TitleBar.vue
src/composables/: useFiles.js  useSettings.js
src/layout/: basic.vue
src/router/: index.js
src/styles/: main.css
src/views/: Home.vue  Settings.vue
