[package]
name = "app"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.0", features = ["tray-icon"] }
tauri-plugin-log = "2"

# 用于获取文件图标
#[cfg(target_os = "windows")]
windows = { version = "0.52.0", features = ["Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_Graphics_Dwm"] }

# 用于图像处理
image = "0.24.7"
base64 = "0.21.7"

# 用于数据库存储
rusqlite = { version = "0.31.0", features = ["bundled"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.3.1"
tauri-plugin-autostart = "2.2.0"
tauri-plugin-notification = "2.3.1"
